test/configCases/errors/self-reexport/aa.js
import { something } from "./a";

something();
